cloudprint (0.11-7) UNRELEASED; urgency=medium

  * OAuth2 support, since the old SASL is not longer working.
        (Closes: 787102)

 -- David Steele <dsteele@gmail.com>  Sat, 30 May 2015 16:44:05 -0400

cloudprint (0.11-6) unstable; urgency=low

  * Limit print jobs names to avoid CUPS fail (thanks Alexandre Bury).
  * Mark the Cloud Print job as failed if CUPS fails.
  * Retry the print job on failure.

 -- David Steele <dsteele@gmail.com>  Thu, 16 Apr 2015 21:39:22 -0400

cloudprint (0.11-5) unstable; urgency=low

  * Fix init.d functionality breakage from daemon rename in 0.11-4.
  * Incorporate upstream copyright headers.
  * Drop the upstream log device reassignment patch.

 -- David Steele <dsteele@gmail.com>  Sun, 11 May 2014 00:21:28 -0400

cloudprint (0.11-4) unstable; urgency=low

  * Reworked the build process for git-buildpackage.
  * Require system-log-daemon instead of rsyslog.
  * Update the home page and VCS URLs.
  * Update to latest upstream:
    - Use argparse, and require Python 2.7.
    - Don't specify /dev/log for the logger.
  * Standardize 'cloudprintd' as a name:
    - Create cloudprintd as a link to cloudprint for the init.
    - cloudprintd man page.
    - Store cloudprint-service auth in /var/lib/cloudprintd.

 -- David Steele <dsteele@gmail.com>  Mon, 14 Apr 2014 22:02:29 -0400

cloudprint (0.11-3.1) cloudprintppa; urgency=low

  * Release for 'cloudprintppa' dist, with hw-dependent Python Dep

 -- David Steele <dsteele@gmail.com>  Sat, 08 Feb 2014 23:44:57 -0500

cloudprint (0.11-3) unstable; urgency=low

  * Add support for cloudprint -i/-x.
  * Documentation cleanup

 -- David Steele <dsteele@gmail.com>  Sat, 08 Feb 2014 18:17:59 -0500

cloudprint (0.11-2.1) cloudprintppa; urgency=low

  * Release for 'cloudprintppa' dist, with hw-dependent Python Dep

 -- David Steele <dsteele@gmail.com>  Thu, 09 Jan 2014 19:47:14 -0500

cloudprint (0.11-2) unstable; urgency=low

  * Fix bug in recovering from network outage.
    - Fixes #9