@@ -1,38 +1,25 @@
-.\" (C) Copyright 2013-2014 David Steele <dsteele@gmail.com>,
+.\" (C) Copyright 2013-2015 David Steele <dsteele@gmail.com>,
 .\"
 .\" This file is part of cloudprint
 .\" Available under the terms of the GNU General Public License version 2 or later
-.TH CLOUDPRINT-SERVICE 7 2014-04-16 Linux "System Commands"
+.TH CLOUDPRINT-SERVICE 7 2015-05-31 Linux "System Commands"
 .SH NAME
 cloudprint-service \- manage the Google Cloud Print proxy
 
 .SH SYNOPSIS
 .TP
-service \fBcloudprintd\fR \fIlogin\fR
-Establish login credentials with Cloud Print, then immediately exit. This will
-prompt for a username and password, if necessary. If the account has two-factor
-authentication enabled, then an application-specific password must be used.
-This and all other \fBcloudprintd\fR service commands must be run as root.
-.TP
-service \fBcloudprintd\fR \fIstart\fR
+systemctl \fIstart\fR \fBcloudprintd.service\fR
 Start the \fBcloudprintd\fR service. This will fail if the credentials have not been
 established. The service will normally start automatically when the computer
 is running.
 .TP
-service \fBcloudprintd\fR \fIstop\fR
+systemctl \fIstop\fR \fBcloudprintd.service\fR
 Stop the \fBcloudprintd\fR service. Login credentials are not lost. Normally,
 the printer will continue to be shown as a valid destination. Any jobs spooled
 during that time will print when the service is restarted.
 .TP
-service \fBcloudprintd\fR \fIstatus\fR
+systemctl \fIstatus\fR \fBcloudprintd.service\fR
 Determine whether the service is running or not.
-.TP
-service \fBcloudprintd\fR \fIlogout\fR
-Delete the login credentials such that the service cannot be restarted without
-another 'login'.
-
-.P
-(...)
 
 .SH DESCRIPTION
 The \fBcloudprintd\fR services manages the operation of a Google Cloud Print
@@ -43,6 +30,8 @@ It is recommended that a dedicated account be used for this service. Printers
 can be shared from that account to others via the printer management page at
 \fIhttps://www.google.com/cloudprint?#printers\fR
 
+Authentication credentials can be established using the sudo-wrapper script
+\fBcps-auth\fR, or from a remote computer using \fBcloudprint-auth\fR.
 .SH FILES
 .TP
 \fI/etc/default/cloudprintd\fR
@@ -50,4 +39,4 @@ This file contains a number of parameters that control cloudprint.
 View the file for more details.
 
 .SH SEE ALSO
-.BR cloudprint(1), cloudprintd(8)
+.BR cloudprint(1), cloudprintd(8), cps-auth(1), cloudprint-auth(1)
