@@ -2,7 +2,8 @@ Source: cloudprint
 Maintainer: David Steele <dsteele@gmail.com>
 Section: net
 Priority: optional
-Build-Depends: python-setuptools (>= 0.6b3), python (>= 2.6.6-3), debhelper (>= 7.4.3)
+Build-Depends: python-setuptools (>= 0.6b3), python (>= 2.6.6-3), debhelper (>= 7.4.3),
+                dh-systemd (>= 1.5)
 Standards-Version: 3.9.6
 X-Python-Version: >= 2.7
 Homepage: https://pypi.python.org/pypi/cloudprint/
