@@ -1,0 +1,25 @@
+.\" Copyright 2015 David Steele <dsteele@gmail.com>
+.\" This file is part of cloudprint
+.\" Available under the terms of the GNU General Public License version 2 or later
+.TH cps-auth 1 2015-05-31 Linux "User Commands"
+.SH NAME
+cps-auth \- Perform OAuth2 authentication for cloudprint-service
+
+.SH SYNOPSIS
+\fB-auth\fP [\fI<user name>\fP]
+
+.SH DESCRIPTION
+The \fBcps-auth\fP provide a sudo wrapper for entering the required OAuth2 credentials for
+\fBcloudprint-service\fR. It will launch a browser window to complete the transaction, and then store
+the credentials locally for \fBcloudprint-service\fR.
+
+See \fBcloudprint-auth\fR for an alternative mechanism, if a graphical desktop is not available
+on the /fBcloudprint-service\fR server.
+
+.SH FILES
+.TP
+\fI/var/lib/cloudprint/authfile\fR
+Credential storage location
+
+.SH SEE ALSO
+.BR cloudprint-service(7), cloudprintd(8), cloudprint(1), cps-auth(1), cloudprint-auth(1)
